--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -1220,7 +1220,7 @@
     "description": "Menu entry to open the whitelist wizard"
   },
   "dont_run_on_pages_on_site": {
-    "message": "Keine Seiten auf dieser Site ausführen",
+    "message": "Nicht auf Seiten dieser Site ausführen",
     "description": "Menu entry to open the whitelist wizard"
   },
   "disabled_on_this_page": {
@@ -1473,7 +1473,7 @@
   },
   "block_annonyances_on_youtube": {
     "message": "Belästigungen auf YouTube™ entfernen",
-    "description": "Checkbox letting user choose whether to block annonyances on youtube.com (such as comments, suggested videos, annotations, and recommended channels)"
+    "description": "Checkbox letting user choose whether to block annoyances on youtube.com (such as comments, suggested videos, annotations, and recommended channels)"
   },
   "show_devtools_panel": {
     "message": "„AdBlock“-Feld in den Entwicklerwerkzeugen anzeigen",
@@ -1961,6 +1961,52 @@
     "message": "Wählen Sie aus den unteren Kategorieren, damit AdBlock gelegentlich Werbung durch qualitativ hochwertige Bilder ersetzt – und so Ihren Tag verschönert.",
     "description": "The label text for the switch on the MyAdBlock Options page"
   },
+  "myadblock_enrollment_title": {
+    "message": "MyAdBlock ist auf diesem Browser eingerichtet!",
+    "description": "The title of the MyAdBlock enrollment box."
+  },
+  "myadblock_enrollment_hide_forever": {
+    "message": "Diese Meldung nicht mehr anzeigen",
+    "description": "The label for a checkbox that will hide the enrollment box forever."
+  },
+  "myadblock_enrollment_success": {
+    "message": "Sie können den magischen Link in Ihrer Bestätigungs-E-Mail nutzen, um MyAdBlock in anderen Chrome-Browsern freizuschalten.",
+    "description": "MyAdBlock successfully licensed message."
+  },
+  "check_email": {
+    "message": "Bitte überprüfen Sie Ihre E-Mail.",
+    "description": "Prompt the user to check their email for a message from AdBlock"
+  },
+  "please_try_again": {
+    "message": "Bitte erneut versuchen.",
+    "description": "Prompt the user to retry the last action."
+  },
+  "contact_support_if_errors_continue": {
+    "message": "Wenn dieser Fehler weiterhin auftritt, kontaktieren Sie bitte: [[support]].",
+    "description": "Warn the user if they continue to see the same error they should contact AdBlock support."
+  },
+  "myadblock_enrollment_resend_success": {
+    "message": "Wir haben einen magischen Link an $email$ geschickt.",
+    "description": "MyAdBlock license email successfully sent message.",
+    "placeholders": {
+      "email": {
+        "content": "$1",
+        "example": "alice@example.com"
+      }
+    }
+  },
+  "myadblock_enrollment_link_info": {
+    "message": "Wenn Sie den Link anklicken, können Sie MyAdBlock einfach in anderen Chrome-Browsern einrichten.",
+    "description": "Explains what happens when clicking the magic link."
+  },
+  "myadblock_enrollment_resend_error": {
+    "message": "Beim erneuten Versenden Ihrer Bestätigungs-E-Mail ist ein Fehler aufgetreten.",
+    "description": "MyAdBlock license email failed to send error message."
+  },
+  "myadblock_enrollment_resend_button": {
+    "message": "Link erneut senden",
+    "description": "Text on the MyAdBlock enrollment resend email button"
+  },
   "error_msg_header": {
     "message": "Hoppla! Wir entschuldigen uns für die Ladeprobleme des AdBlock-Menüs.",
     "description": "The text on the popup menu when an error has occurred"
@@ -2015,7 +2061,7 @@
   },
   "filter_annoyances_explained": {
     "message": "blockiert seiteninterne Pop-ups, soziale Medien und verknüpfte Widgets sowie andere Belästigungen",
-    "description": "A filter list explaination"
+    "description": "A filter list explanation"
   },
   "filterwarning_removal2": {
     "message": "Liste Adblock Warning Removal",
@@ -2023,7 +2069,7 @@
   },
   "filter_warning_removal_explained": {
     "message": "entfernt Warnungen über die Benutzung von Ad-Blockern",
-    "description": "A filter list explaination"
+    "description": "A filter list explanation"
   },
   "filterlistsrock2": {
     "message": "Die Filterlisten blockieren die meiste Werbung im Netz. Sie können auch ...",
@@ -2157,6 +2203,10 @@
     "message": "AdBlock: Homepage",
     "description": "Title for link to AdBlock's website"
   },
+  "twitch_hiding_option": {
+    "message": "Ausblenden von Streaming-Anzeigen auf Twitch™ aktivieren",
+    "description": "Description of option on General tab of the Options page to hide Twitch ads"
+  },
   "callout_new_feature": {
     "message": "NEU!",
     "description": "Text to callout a new feature"
@@ -2188,5 +2238,157 @@
   "myadblock_payment_not_available_subtitle": {
     "message": "Es ist leider keine Serververbindung möglich",
     "description": "The sub-title of an error message box in payment iframe in the Options page."
+  },
+  "sync_tab_item": {
+    "message": "Synchronisieren",
+    "description": "Title of the Sync sub-tab of the Options page"
+  },
+  "myadblock_sync_description": {
+    "message": "Synchronisieren Sie Ihre Einstellungen über mehrere Browser und Geräte hinweg",
+    "description": "Text on the MyAdBlock tab, Sync panel of the Options page"
+  },
+  "sync_check_status_text": {
+    "message": "Synchronisieren und personalisieren Sie AdBlock über Ihre Erweiterungen hinweg  [[Status prüfen]]",
+    "description": "message and button text on the Sync sub-tab of the Options page"
+  },
+  "sync_turn_on_text": {
+    "message": "Synchronisieren und personalisieren Sie AdBlock über Ihre Erweiterungen hinweg  [[Synchronisieren aktivieren]]",
+    "description": "message and button text on the Sync sub-tab of the Options page"
+  },
+  "sync_turn_off_btn_text": {
+    "message": "Deaktivieren",
+    "description": "button text on the Sync sub-tab of the Options page"
+  },
+  "sync_turn_on_invalid_name_text": {
+    "message": "Bitte benennen Sie diese Erweiterung, um fortzufahren",
+    "description": "error message text on the Sync sub-tab of the Options page"
+  },
+  "sync_turn_on_duplicate_name_text": {
+    "message": "Dieser Erweiterungsname wird bereits verwendet",
+    "description": "error message text on the Sync sub-tab of the Options page"
+  },
+  "sync_extension_section_title": {
+    "message": "Erweiterungen",
+    "description": "section title text on the Sync sub-tab of the Options page"
+  },
+  "sync_header_message_no_license": {
+    "message": "Bitte geben Sie uns einen Moment, um die Synchronisierung zur Verfügung zu stellen.",
+    "description": "message to users on the sync page when the license is unavailable, inactive or a license ID hasn't been returned yet"
+  },
+  "sync_header_message_getting_license": {
+    "message": "wird geprüft ...",
+    "description": "message to users on the sync page when the extension is getting the license"
+  },
+  "sync_header_message_in_progress": {
+    "message": "Synchronisierung läuft ...",
+    "description": "message to users on the options pages when syncing with the server is in progress"
+  },
+  "sync_header_message_sync_complete": {
+    "message": "Synchronisierung abgeschlossen",
+    "description": "message to users on the option pages when syncing with the server server is complete"
+  },
+  "sync_extension_no_extension_msg": {
+    "message": "Sie haben keine synchronisierten Erweiterungen.",
+    "description": "message to users on the sync page when the license is unavailable, inactive or a license ID hasn't been returned yet"
+  },
+  "sync_header_message_setup_fail_prefix": {
+    "message": "Synchronisierungsfehler:",
+    "description": "start of error message to users on the sync page when sync fails."
+  },
+  "sync_header_message_setup_fail_part_2": {
+    "message": "Bitte versuchen Sie, die Synchronisierung in wenigen Minuten erneut zu aktivieren.",
+    "description": "message to users on the sync page when initial setup of sync fails for some unknown reason."
+  },
+  "sync_header_message_error_prefix": {
+    "message": "Diese Erweiterung war nicht synchronisiert.",
+    "description": "Start of an sync error message to users on the Options page or AdBlock popup menu."
+  },
+  "sync_header_message_error_suffix": {
+    "message": "Bitte versuchen Sie es später noch einmal.",
+    "description": "Part of an sync error message to users on the Options page or AdBlock popup menu."
+  },
+  "sync_header_message_old_commit_version_part_2": {
+    "message": "Wir haben diese Erweiterung synchronisiert und Ihre Änderungen rückgängig gemacht.",
+    "description": "part 2 of a message to users on the sync page and popup menu when initial setup of sync fails for some unknown reason."
+  },
+  "sync_header_message_old_commit_version_part_3": {
+    "message": "Bitte nehmen Sie Ihre Änderungen erneut vor.",
+    "description": "part 3 of a message to users on the sync page when initial setup of sync fails for some unknown reason."
+  },
+  "sync_header_error_revert_message_part_2": {
+    "message": "Ihre Änderungen wurden rückgängig gemacht.",
+    "description": "part 2 of a message to users on the sync page when sending the sync data fails for some unknown reason."
+  },
+  "sync_header_message_old_commit_version_customize_tab_part_2": {
+    "message": "Wir haben diese Erweiterung synchronisiert und werden Ihre Änderungen rückgängig machen.",
+    "description": "part 2 of a message to users on the sync page when initial setup of sync fails for some unknown reason."
+  },
+  "sync_header_message_old_commit_version_customize_tab_part_3": {
+    "message": "Bitte kopieren Sie Ihre eigenen Regeln in die Zwischenablage, laden Sie die Seite neu und nehmen Sie Ihre Änderungen erneut vor.",
+    "description": "part 3 of a message to users on the sync page when initial setup of sync fails for some unknown reason."
+  },
+  "sync_header_error_message_menu_part_3": {
+    "message": "Bitte nehmen Sie Ihre Änderungen erneut vor.",
+    "description": "part 3 of a message to users on the sync page when initial setup of sync fails for some unknown reason."
+  },
+  "sync_show_name_text": {
+    "message": "[[$name$]] ist jetzt synchronisiert",
+    "description": "message to users on the sync page when which includes the name of the extension \/ device",
+    "placeholders": {
+      "name": {
+        "content": "$1",
+        "example": "Device 1"
+      }
+    }
+  },
+  "sync_device_name_list_updated_at_msg": {
+    "message": "zuletzt aktualisiert am $timestamp$",
+    "description": "message to users on when the sync page was last updated with the name of the extensions \/ devices (displayed in locale specific format)",
+    "placeholders": {
+      "timestamp": {
+        "content": "$1",
+        "example": "April 30, 2019 6:25 pm for US\/English locale"
+      }
+    }
+  },
+  "sync_extension_name_placeholder": {
+    "message": "Benennen Sie diese Erweiterung ...",
+    "description": "placeholder text in the extension \/ device name field on the sync page"
+  },
+  "sync_verify_turn_on_text": {
+    "message": "Das Aktivieren der Synchronisierung löscht bestehende Einstellungsdaten für diese Erweiterung.",
+    "description": "message text in the extension \/ device name field on the sync page"
+  },
+  "sync_update_now_section_title": {
+    "message": "Manuelle Synchronisierung",
+    "description": "section title for the sync now section on the sync page"
+  },
+  "sync_now_message": {
+    "message": "Ich werde Updates automatisch abrufen; Sie können auch",
+    "description": "message text in the on the sync page "
+  },
+  "sync_now_btn_text": {
+    "message": "Jetzt synchronisieren",
+    "description": "button text on the Sync sub-tab of the Options page"
+  },
+  "sync_message_old_version_part_1": {
+    "message": "Sie nutzen eine alte Version von AdBlock.",
+    "description": "button text on the Sync sub-tab of the Options page"
+  },
+  "sync_message_old_version_part_2": {
+    "message": "Bitte [[aktualisieren Sie AdBlock]], damit wir Ihre Einstellungen synchronisieren können.",
+    "description": "button text on the Sync sub-tab of the Options page"
+  },
+  "filteracceptable_ads_privacy": {
+    "message": "Datenschutz für annehmbare Werbung",
+    "description": "A filter list"
+  },
+  "acceptable_ads_privacy": {
+    "message": "Nur Werbung ohne Tracking von Drittanbietern zulassen",
+    "description": "The text of an Acceptable Ads sub-option in the General tab"
+  },
+  "enable_do_not_track_advice": {
+    "message": "Damit diese Funktion ordnungsgemäß funktioniert, aktivieren Sie bitte die Nichtverfolgung (DNT; Do Not Track) in den Einstellungen Ihres Browsers.",
+    "description": "The text advicing to enable DNT if Acceptable Ads is enabled in the General tab"
   }
 }
