--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -1473,7 +1473,7 @@
   },
   "block_annonyances_on_youtube": {
     "message": "Eliminar molestias en YouTube™",
-    "description": "Checkbox letting user choose whether to block annonyances on youtube.com (such as comments, suggested videos, annotations, and recommended channels)"
+    "description": "Checkbox letting user choose whether to block annoyances on youtube.com (such as comments, suggested videos, annotations, and recommended channels)"
   },
   "show_devtools_panel": {
     "message": "Mostar el panel \"AdBlock\" en las herramientas de desarrollo",
@@ -1961,6 +1961,52 @@
     "message": "Selecciona de entre las categorías de más abajo y AdBlock reemplazará los anuncios con imágenes de alta calidad que te alegrarán el día.",
     "description": "The label text for the switch on the MyAdBlock Options page"
   },
+  "myadblock_enrollment_title": {
+    "message": "¡My AdBlock está instalado en este navegador!",
+    "description": "The title of the MyAdBlock enrollment box."
+  },
+  "myadblock_enrollment_hide_forever": {
+    "message": "No volver a mostrar este mensaje",
+    "description": "The label for a checkbox that will hide the enrollment box forever."
+  },
+  "myadblock_enrollment_success": {
+    "message": "Puedes usar el enlace en el correo de confirmación para desbloquear MyAdBlock en otros navegadores Chrome.",
+    "description": "MyAdBlock successfully licensed message."
+  },
+  "check_email": {
+    "message": "Comprueba tu correo electrónico.",
+    "description": "Prompt the user to check their email for a message from AdBlock"
+  },
+  "please_try_again": {
+    "message": "Vuelve a intentarlo.",
+    "description": "Prompt the user to retry the last action."
+  },
+  "contact_support_if_errors_continue": {
+    "message": "Si sigues viendo este error, ponte en contacto con el servicio de [[support]].",
+    "description": "Warn the user if they continue to see the same error they should contact AdBlock support."
+  },
+  "myadblock_enrollment_resend_success": {
+    "message": "Te hemos enviado un enlace a $email$.",
+    "description": "MyAdBlock license email successfully sent message.",
+    "placeholders": {
+      "email": {
+        "content": "$1",
+        "example": "alice@example.com"
+      }
+    }
+  },
+  "myadblock_enrollment_link_info": {
+    "message": "Si haces clic en el enlace, podrás intalar MyAdBlock de forma sencilla en otros navegadores Chrome.",
+    "description": "Explains what happens when clicking the magic link."
+  },
+  "myadblock_enrollment_resend_error": {
+    "message": "Hubo un problema al volver a enviar el correo de confirmación.",
+    "description": "MyAdBlock license email failed to send error message."
+  },
+  "myadblock_enrollment_resend_button": {
+    "message": "reenviar enlace",
+    "description": "Text on the MyAdBlock enrollment resend email button"
+  },
   "error_msg_header": {
     "message": "¡Ups! Lo sentimos, no se ha podido cargar el menú de AdBlock.",
     "description": "The text on the popup menu when an error has occurred"
@@ -2015,7 +2061,7 @@
   },
   "filter_annoyances_explained": {
     "message": "bloquea elementos emergentes insertados en páginas, redes sociales y widgets, así como otras molestias",
-    "description": "A filter list explaination"
+    "description": "A filter list explanation"
   },
   "filterwarning_removal2": {
     "message": "Lista Adblock Warning Removal",
@@ -2023,7 +2069,7 @@
   },
   "filter_warning_removal_explained": {
     "message": "elimina advertencias usando bloqueadores de anuncios",
-    "description": "A filter list explaination"
+    "description": "A filter list explanation"
   },
   "filterlistsrock2": {
     "message": "Las listas de filtros bloquean la mayor parte de anuncios de la red. También podrás...",
@@ -2157,6 +2203,10 @@
     "message": "Página de inicio de AdBlock",
     "description": "Title for link to AdBlock's website"
   },
+  "twitch_hiding_option": {
+    "message": "Permite ocultar anuncios en las retransmisiones de Twitch™",
+    "description": "Description of option on General tab of the Options page to hide Twitch ads"
+  },
   "callout_new_feature": {
     "message": "NUEVO!",
     "description": "Text to callout a new feature"
@@ -2188,5 +2238,157 @@
   "myadblock_payment_not_available_subtitle": {
     "message": "No podemos conectarte a nuestros servidores",
     "description": "The sub-title of an error message box in payment iframe in the Options page."
+  },
+  "sync_tab_item": {
+    "message": "Sincronizar",
+    "description": "Title of the Sync sub-tab of the Options page"
+  },
+  "myadblock_sync_description": {
+    "message": "Sincroniza tus preferencias entre diferentes navegadores y dispositivos",
+    "description": "Text on the MyAdBlock tab, Sync panel of the Options page"
+  },
+  "sync_check_status_text": {
+    "message": "Sincroniza y personaliza AdBlock entre extensiones [[desactivar sincronización]]",
+    "description": "message and button text on the Sync sub-tab of the Options page"
+  },
+  "sync_turn_on_text": {
+    "message": "Sincroniza y personaliza AdBlock entre extensiones [[activar sincronización]]",
+    "description": "message and button text on the Sync sub-tab of the Options page"
+  },
+  "sync_turn_off_btn_text": {
+    "message": "Desactivar",
+    "description": "button text on the Sync sub-tab of the Options page"
+  },
+  "sync_turn_on_invalid_name_text": {
+    "message": "Ponle nombre a esta extensión para continuar",
+    "description": "error message text on the Sync sub-tab of the Options page"
+  },
+  "sync_turn_on_duplicate_name_text": {
+    "message": "El nombre de la extensión ya está siendo utilizado",
+    "description": "error message text on the Sync sub-tab of the Options page"
+  },
+  "sync_extension_section_title": {
+    "message": "Extensiones",
+    "description": "section title text on the Sync sub-tab of the Options page"
+  },
+  "sync_header_message_no_license": {
+    "message": "Danos unos instantes para preparar la sincronización.",
+    "description": "message to users on the sync page when the license is unavailable, inactive or a license ID hasn't been returned yet"
+  },
+  "sync_header_message_getting_license": {
+    "message": "comprobando...",
+    "description": "message to users on the sync page when the extension is getting the license"
+  },
+  "sync_header_message_in_progress": {
+    "message": "Sincronización en proceso…",
+    "description": "message to users on the options pages when syncing with the server is in progress"
+  },
+  "sync_header_message_sync_complete": {
+    "message": "Sincronización completada",
+    "description": "message to users on the option pages when syncing with the server server is complete"
+  },
+  "sync_extension_no_extension_msg": {
+    "message": "No hay extensiones sincronizadas.",
+    "description": "message to users on the sync page when the license is unavailable, inactive or a license ID hasn't been returned yet"
+  },
+  "sync_header_message_setup_fail_prefix": {
+    "message": "Error de sincronización:",
+    "description": "start of error message to users on the sync page when sync fails."
+  },
+  "sync_header_message_setup_fail_part_2": {
+    "message": "Activa la sincronización de nuevo en unos minutos.",
+    "description": "message to users on the sync page when initial setup of sync fails for some unknown reason."
+  },
+  "sync_header_message_error_prefix": {
+    "message": "Esta extensión no estaba sincronizada.",
+    "description": "Start of an sync error message to users on the Options page or AdBlock popup menu."
+  },
+  "sync_header_message_error_suffix": {
+    "message": "Vuelve a intentarlo más tarde.",
+    "description": "Part of an sync error message to users on the Options page or AdBlock popup menu."
+  },
+  "sync_header_message_old_commit_version_part_2": {
+    "message": "Hemos sincronizado esta extensión y revertido tus cambios.",
+    "description": "part 2 of a message to users on the sync page and popup menu when initial setup of sync fails for some unknown reason."
+  },
+  "sync_header_message_old_commit_version_part_3": {
+    "message": "Vuelve a introducir los cambios.",
+    "description": "part 3 of a message to users on the sync page when initial setup of sync fails for some unknown reason."
+  },
+  "sync_header_error_revert_message_part_2": {
+    "message": "Se han revertido los cambios.",
+    "description": "part 2 of a message to users on the sync page when sending the sync data fails for some unknown reason."
+  },
+  "sync_header_message_old_commit_version_customize_tab_part_2": {
+    "message": "Hemos sincronizado esta extensión y vamos a revertir tus cambios.",
+    "description": "part 2 of a message to users on the sync page when initial setup of sync fails for some unknown reason."
+  },
+  "sync_header_message_old_commit_version_customize_tab_part_3": {
+    "message": "Copia tus reglas personalizadas en el portapapeles, vuelve a cargar la página e introduce tus cambios de nuevo.",
+    "description": "part 3 of a message to users on the sync page when initial setup of sync fails for some unknown reason."
+  },
+  "sync_header_error_message_menu_part_3": {
+    "message": "Vuelve a introducir los cambios.",
+    "description": "part 3 of a message to users on the sync page when initial setup of sync fails for some unknown reason."
+  },
+  "sync_show_name_text": {
+    "message": "[[$name$]] se ha sincronizado",
+    "description": "message to users on the sync page when which includes the name of the extension \/ device",
+    "placeholders": {
+      "name": {
+        "content": "$1",
+        "example": "Device 1"
+      }
+    }
+  },
+  "sync_device_name_list_updated_at_msg": {
+    "message": "última actualización: $timestamp$",
+    "description": "message to users on when the sync page was last updated with the name of the extensions \/ devices (displayed in locale specific format)",
+    "placeholders": {
+      "timestamp": {
+        "content": "$1",
+        "example": "April 30, 2019 6:25 pm for US\/English locale"
+      }
+    }
+  },
+  "sync_extension_name_placeholder": {
+    "message": "Ponle nombre a esta extensión…",
+    "description": "placeholder text in the extension \/ device name field on the sync page"
+  },
+  "sync_verify_turn_on_text": {
+    "message": "Al activar la sincronización, se eliminarán los ajustes ya existentes de esta extensión.",
+    "description": "message text in the extension \/ device name field on the sync page"
+  },
+  "sync_update_now_section_title": {
+    "message": "Sincronización manual",
+    "description": "section title for the sync now section on the sync page"
+  },
+  "sync_now_message": {
+    "message": "Buscaré actualizaciones automáticamente. También puedes",
+    "description": "message text in the on the sync page "
+  },
+  "sync_now_btn_text": {
+    "message": "Sincronizar ahora",
+    "description": "button text on the Sync sub-tab of the Options page"
+  },
+  "sync_message_old_version_part_1": {
+    "message": "Estás usando una versión antigua de AdBlock.",
+    "description": "button text on the Sync sub-tab of the Options page"
+  },
+  "sync_message_old_version_part_2": {
+    "message": "[[Actualiza AdBlock]] y podremos sincronizar tus ajustes.",
+    "description": "button text on the Sync sub-tab of the Options page"
+  },
+  "filteracceptable_ads_privacy": {
+    "message": "Privacidad de Anuncios Aceptables",
+    "description": "A filter list"
+  },
+  "acceptable_ads_privacy": {
+    "message": "Solo permite anuncios sin rastreadores de terceros",
+    "description": "The text of an Acceptable Ads sub-option in the General tab"
+  },
+  "enable_do_not_track_advice": {
+    "message": "Para que esta característica funcione correctamente, activa \"Do not Track\" (DNT) en tu navegador.",
+    "description": "The text advicing to enable DNT if Acceptable Ads is enabled in the General tab"
   }
 }
