--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -1116,7 +1116,7 @@
     "description": "Telling users who won't report an ad to us how to handle it for themselves"
   },
   "popup_menu_title": {
-    "message": "AdBlock Popup Menu",
+    "message": "Всплывающее меню AdBlock",
     "description": "Title for the popup menu."
   },
   "block_an_ad_on_this_page": {
@@ -1473,7 +1473,7 @@
   },
   "block_annonyances_on_youtube": {
     "message": "Скрывать все раздражающее на YouTube™",
-    "description": "Checkbox letting user choose whether to block annonyances on youtube.com (such as comments, suggested videos, annotations, and recommended channels)"
+    "description": "Checkbox letting user choose whether to block annoyances on youtube.com (such as comments, suggested videos, annotations, and recommended channels)"
   },
   "show_devtools_panel": {
     "message": "Показывать панель «AdBlock» в средствах разработчика",
@@ -1961,6 +1961,52 @@
     "message": "Выберите категорию из списка ниже, и периодически AdBlock будет заменять рекламу на HD-изображения и поднимать вам настроение.",
     "description": "The label text for the switch on the MyAdBlock Options page"
   },
+  "myadblock_enrollment_title": {
+    "message": "MyAdBlock установлен в этот браузер!",
+    "description": "The title of the MyAdBlock enrollment box."
+  },
+  "myadblock_enrollment_hide_forever": {
+    "message": "Не показывать снова",
+    "description": "The label for a checkbox that will hide the enrollment box forever."
+  },
+  "myadblock_enrollment_success": {
+    "message": "Воспользуйтесь волшебной ссылкой из подтверждающего письма, чтобы разблокировать MyAdBlock в других браузерах Chrome.",
+    "description": "MyAdBlock successfully licensed message."
+  },
+  "check_email": {
+    "message": "Проверьте почту.",
+    "description": "Prompt the user to check their email for a message from AdBlock"
+  },
+  "please_try_again": {
+    "message": "Попробуйте еще раз.",
+    "description": "Prompt the user to retry the last action."
+  },
+  "contact_support_if_errors_continue": {
+    "message": "Если вы видите эту ошибку уже не в первый раз, то обратитесь к нам: [[support]].",
+    "description": "Warn the user if they continue to see the same error they should contact AdBlock support."
+  },
+  "myadblock_enrollment_resend_success": {
+    "message": "Мы отправили волшебную ссылку на $email$.",
+    "description": "MyAdBlock license email successfully sent message.",
+    "placeholders": {
+      "email": {
+        "content": "$1",
+        "example": "alice@example.com"
+      }
+    }
+  },
+  "myadblock_enrollment_link_info": {
+    "message": "Если вы перейдете по ссылке, то вам будет проще настроить MyAdBlock в других браузерах Chrome.",
+    "description": "Explains what happens when clicking the magic link."
+  },
+  "myadblock_enrollment_resend_error": {
+    "message": "Ошибка отправки подтверждающего письма.",
+    "description": "MyAdBlock license email failed to send error message."
+  },
+  "myadblock_enrollment_resend_button": {
+    "message": "Отправить еще раз",
+    "description": "Text on the MyAdBlock enrollment resend email button"
+  },
   "error_msg_header": {
     "message": "Ой-ой! Простите, но AdBlock не смог загрузить меню.",
     "description": "The text on the popup menu when an error has occurred"
@@ -2015,7 +2061,7 @@
   },
   "filter_annoyances_explained": {
     "message": "скрывает всплывающие окна, виджеты социальных сетей и прочую рекламу",
-    "description": "A filter list explaination"
+    "description": "A filter list explanation"
   },
   "filterwarning_removal2": {
     "message": "Список антиантиблокировщиков рекламы",
@@ -2023,7 +2069,7 @@
   },
   "filter_warning_removal_explained": {
     "message": "убирает предупреждения об использовании блокировщика рекламы",
-    "description": "A filter list explaination"
+    "description": "A filter list explanation"
   },
   "filterlistsrock2": {
     "message": "Списки фильтров блокируют большую часть рекламы в Интернете. Вы также можете...",
@@ -2094,11 +2140,11 @@
     "description": "Text in theme box of the Themes tab of the Options page (no more than 60 characters)"
   },
   "more_themes_on_the_way": {
-    "message": "More themes on the way!",
+    "message": "Скоро будет больше тем!",
     "description": "Text in theme box of the Themes tab of the Options page (no more than 60 characters)"
   },
   "myadblock_themes_description": {
-    "message": "Change the way AdBlock looks, including font size and color scheme",
+    "message": "Меняйте цветовую гамму и размер шрифтов AdBlock",
     "description": "Text briefly describing what themes do on the MyAdBlock tab of the Options page"
   },
   "stay_tuned": {
@@ -2106,7 +2152,7 @@
     "description": "Text in theme box of the Themes tab of the Options page (no more than 30 characters)"
   },
   "support_to_unlock": {
-    "message": "Support to unlock",
+    "message": "Поддержите, чтобы открыть",
     "description": "Text in theme box of the Themes tab of the Options page (no more than 30 characters)"
   },
   "header": {
@@ -2126,19 +2172,19 @@
     "description": "Name of a theme in the Themes tab of the Options page"
   },
   "watermelon_theme": {
-    "message": "Watermelon",
+    "message": "Дыня",
     "description": "Name of a theme in the Themes tab of the Options page"
   },
   "solarized_theme": {
-    "message": "Solarized",
+    "message": "Солнце",
     "description": "Name of a theme in the Themes tab of the Options page"
   },
   "ocean_theme": {
-    "message": "Ocean",
+    "message": "Океан",
     "description": "Name of a theme in the Themes tab of the Options page"
   },
   "sunshine_theme": {
-    "message": "Sunshine",
+    "message": "Свет",
     "description": "Name of a theme in the Themes tab of the Options page"
   },
   "apply_theme": {
@@ -2146,31 +2192,35 @@
     "description": "Text of clickable element that applies the theme of a theme box in the Themes tab of the Options page"
   },
   "adblock_twitter": {
-    "message": "AdBlock Twitter",
+    "message": "Twitter AdBlock",
     "description": "Title for link to AdBlock's Twitter account"
   },
   "adblock_facebook": {
-    "message": "AdBlock Facebook",
+    "message": "Facebook AdBlock",
     "description": "Title for link to AdBlock's Facebook account"
   },
   "adblock_website": {
-    "message": "AdBlock Home Page",
+    "message": "Домашняя страница AdBlock",
     "description": "Title for link to AdBlock's website"
+  },
+  "twitch_hiding_option": {
+    "message": "Включить скрытие рекламы во время стрима на Twitch™",
+    "description": "Description of option on General tab of the Options page to hide Twitch ads"
   },
   "callout_new_feature": {
     "message": "НОВОЕ!",
     "description": "Text to callout a new feature"
   },
   "myadblock_short_description": {
-    "message": "Experience an enhanced AdBlock with fun new features exclusively for donors",
+    "message": "Попробуйте новую улучшенную версию AdBlock с эксклюзивными функциями для тех, кто поддерживает нас",
     "description": "Text substitle of myAdBlock page in the options page"
   },
   "image_swap": {
-    "message": "Image Swap",
+    "message": "Замена изображений",
     "description": "Title of the Image Swap sub-tab of the Options page"
   },
   "myadblock_subscribe_invite": {
-    "message": "Subscribe to MyAdBlock to unlock",
+    "message": "Подпишитесь на MyAdBlock, чтобы открыть",
     "description": "Text on hover of a locked MyAdBlock feature in the MyAdBlock tab of the Options page"
   },
   "myadblock_more_coming_soon": {
@@ -2178,15 +2228,167 @@
     "description": "Title of the teaser MyAdBlock feature box in the MyAdBlock tab of the Options page"
   },
   "myadblock_benefits_explained": {
-    "message": "In exchange for supporting us by enabling MyAdBlock, you'll get access to the latest tools and features as soon as they're released.",
+    "message": "Поддержите нас, включив MyAdBlock, и первыми получайте доступ к новейшим функциям и инструментам.",
     "description": "Main text of the teaser MyAdBlock feature in the MyAdBlock tab of the Options page"
   },
   "myadblock_payment_not_available_callout": {
-    "message": "Oh No!",
+    "message": "О нет!",
     "description": "The text notifying something is wrong in the payment iframe in the Options page."
   },
   "myadblock_payment_not_available_subtitle": {
-    "message": "We were unable to connect to our servers",
+    "message": "Мы не смогли подключиться к нашим серверам",
     "description": "The sub-title of an error message box in payment iframe in the Options page."
+  },
+  "sync_tab_item": {
+    "message": "Синхронизация",
+    "description": "Title of the Sync sub-tab of the Options page"
+  },
+  "myadblock_sync_description": {
+    "message": "Синхронизируйте настройки между разными браузерами и устройствами",
+    "description": "Text on the MyAdBlock tab, Sync panel of the Options page"
+  },
+  "sync_check_status_text": {
+    "message": "Синхронизируйте AdBlock между расширениями [[Проверить статус]]",
+    "description": "message and button text on the Sync sub-tab of the Options page"
+  },
+  "sync_turn_on_text": {
+    "message": "Синхронизируйте AdBlock между расширениями [[Включить синхронизацию]]",
+    "description": "message and button text on the Sync sub-tab of the Options page"
+  },
+  "sync_turn_off_btn_text": {
+    "message": "Отключить",
+    "description": "button text on the Sync sub-tab of the Options page"
+  },
+  "sync_turn_on_invalid_name_text": {
+    "message": "Пожалуйста, назовите расширение, чтобы продолжить",
+    "description": "error message text on the Sync sub-tab of the Options page"
+  },
+  "sync_turn_on_duplicate_name_text": {
+    "message": "Такое имя расширения уже существует",
+    "description": "error message text on the Sync sub-tab of the Options page"
+  },
+  "sync_extension_section_title": {
+    "message": "Расширения",
+    "description": "section title text on the Sync sub-tab of the Options page"
+  },
+  "sync_header_message_no_license": {
+    "message": "Подождите пару секунд, пока мы подготавливаем все.",
+    "description": "message to users on the sync page when the license is unavailable, inactive or a license ID hasn't been returned yet"
+  },
+  "sync_header_message_getting_license": {
+    "message": "проверка...",
+    "description": "message to users on the sync page when the extension is getting the license"
+  },
+  "sync_header_message_in_progress": {
+    "message": "Идет синхронизация…",
+    "description": "message to users on the options pages when syncing with the server is in progress"
+  },
+  "sync_header_message_sync_complete": {
+    "message": "Синхронизация завершена",
+    "description": "message to users on the option pages when syncing with the server server is complete"
+  },
+  "sync_extension_no_extension_msg": {
+    "message": "Нет синхронизированных расширений.",
+    "description": "message to users on the sync page when the license is unavailable, inactive or a license ID hasn't been returned yet"
+  },
+  "sync_header_message_setup_fail_prefix": {
+    "message": "Ошибка синхронизации:",
+    "description": "start of error message to users on the sync page when sync fails."
+  },
+  "sync_header_message_setup_fail_part_2": {
+    "message": "Попробуйте синхронизировать заново чуть попозже.",
+    "description": "message to users on the sync page when initial setup of sync fails for some unknown reason."
+  },
+  "sync_header_message_error_prefix": {
+    "message": "Расширение не было синхронизировано.",
+    "description": "Start of an sync error message to users on the Options page or AdBlock popup menu."
+  },
+  "sync_header_message_error_suffix": {
+    "message": "Попробуйте еще раз.",
+    "description": "Part of an sync error message to users on the Options page or AdBlock popup menu."
+  },
+  "sync_header_message_old_commit_version_part_2": {
+    "message": "Расширение синхронизировано, изменения сброшены.",
+    "description": "part 2 of a message to users on the sync page and popup menu when initial setup of sync fails for some unknown reason."
+  },
+  "sync_header_message_old_commit_version_part_3": {
+    "message": "Пожалуйста, внесите изменения повторно.",
+    "description": "part 3 of a message to users on the sync page when initial setup of sync fails for some unknown reason."
+  },
+  "sync_header_error_revert_message_part_2": {
+    "message": "Ваши изменения сброшены.",
+    "description": "part 2 of a message to users on the sync page when sending the sync data fails for some unknown reason."
+  },
+  "sync_header_message_old_commit_version_customize_tab_part_2": {
+    "message": "Расширение синхронизировано, изменения будут сброшены.",
+    "description": "part 2 of a message to users on the sync page when initial setup of sync fails for some unknown reason."
+  },
+  "sync_header_message_old_commit_version_customize_tab_part_3": {
+    "message": "Пожалуйста, скопируйте ваши настройки в буфер обмена, обновите страницу и внесите их заново.",
+    "description": "part 3 of a message to users on the sync page when initial setup of sync fails for some unknown reason."
+  },
+  "sync_header_error_message_menu_part_3": {
+    "message": "Пожалуйста, внесите изменения повторно.",
+    "description": "part 3 of a message to users on the sync page when initial setup of sync fails for some unknown reason."
+  },
+  "sync_show_name_text": {
+    "message": "[[$name$]] синхронизируется",
+    "description": "message to users on the sync page when which includes the name of the extension \/ device",
+    "placeholders": {
+      "name": {
+        "content": "$1",
+        "example": "Device 1"
+      }
+    }
+  },
+  "sync_device_name_list_updated_at_msg": {
+    "message": "последнее обновление: $timestamp$",
+    "description": "message to users on when the sync page was last updated with the name of the extensions \/ devices (displayed in locale specific format)",
+    "placeholders": {
+      "timestamp": {
+        "content": "$1",
+        "example": "April 30, 2019 6:25 pm for US\/English locale"
+      }
+    }
+  },
+  "sync_extension_name_placeholder": {
+    "message": "Назовите расширение…",
+    "description": "placeholder text in the extension \/ device name field on the sync page"
+  },
+  "sync_verify_turn_on_text": {
+    "message": "Включение синхронизации приведет к сбросу настроек этого расширения.",
+    "description": "message text in the extension \/ device name field on the sync page"
+  },
+  "sync_update_now_section_title": {
+    "message": "Синхронизировать вручную",
+    "description": "section title for the sync now section on the sync page"
+  },
+  "sync_now_message": {
+    "message": "Я буду автоматически искать обновления, но вы можете",
+    "description": "message text in the on the sync page "
+  },
+  "sync_now_btn_text": {
+    "message": "Синхронизировать сейчас",
+    "description": "button text on the Sync sub-tab of the Options page"
+  },
+  "sync_message_old_version_part_1": {
+    "message": "Вы используете устаревшую версию AdBlock.",
+    "description": "button text on the Sync sub-tab of the Options page"
+  },
+  "sync_message_old_version_part_2": {
+    "message": "Для синхронизации настроек вам нужно [[обновить AdBlock]].",
+    "description": "button text on the Sync sub-tab of the Options page"
+  },
+  "filteracceptable_ads_privacy": {
+    "message": "Политика приемлемой рекламы",
+    "description": "A filter list"
+  },
+  "acceptable_ads_privacy": {
+    "message": "Не показывать рекламу, передающую информацию третьим лицам",
+    "description": "The text of an Acceptable Ads sub-option in the General tab"
+  },
+  "enable_do_not_track_advice": {
+    "message": "Для корректной работы функции включите в настройках браузера Do Not Track (DNT).",
+    "description": "The text advicing to enable DNT if Acceptable Ads is enabled in the General tab"
   }
 }
