--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -408,7 +408,7 @@
     "description": "Label to display filter list links"
   },
   "filterantisocial": {
-    "message": "反社會過濾清單（刪除社群媒體按鈕）",
+    "message": "反社群過濾清單（刪除社群媒體按鈕）",
     "description": "A filter list"
   },
   "filterannoyances": {
@@ -1473,7 +1473,7 @@
   },
   "block_annonyances_on_youtube": {
     "message": "移除 YouTube™上的擾人內容",
-    "description": "Checkbox letting user choose whether to block annonyances on youtube.com (such as comments, suggested videos, annotations, and recommended channels)"
+    "description": "Checkbox letting user choose whether to block annoyances on youtube.com (such as comments, suggested videos, annotations, and recommended channels)"
   },
   "show_devtools_panel": {
     "message": "在開發工具中顯示「AdBlock」面板",
@@ -1961,6 +1961,52 @@
     "message": "從以下類別選擇，AdBlock 有時就會將廣告替換為高畫質圖片，帶給您愉快的心情。",
     "description": "The label text for the switch on the MyAdBlock Options page"
   },
+  "myadblock_enrollment_title": {
+    "message": "MyAdBlock 已在此瀏覽器中設定完成！",
+    "description": "The title of the MyAdBlock enrollment box."
+  },
+  "myadblock_enrollment_hide_forever": {
+    "message": "不再顯示此訊息",
+    "description": "The label for a checkbox that will hide the enrollment box forever."
+  },
+  "myadblock_enrollment_success": {
+    "message": "您可以使用確認信中的一鍵連結，在其他 Chrome 瀏覽器中解鎖 MyAdBlock。",
+    "description": "MyAdBlock successfully licensed message."
+  },
+  "check_email": {
+    "message": "請查看您的電子郵件。",
+    "description": "Prompt the user to check their email for a message from AdBlock"
+  },
+  "please_try_again": {
+    "message": "請再試一次。",
+    "description": "Prompt the user to retry the last action."
+  },
+  "contact_support_if_errors_continue": {
+    "message": "如果您仍看到此錯誤，請聯絡[[support]]。",
+    "description": "Warn the user if they continue to see the same error they should contact AdBlock support."
+  },
+  "myadblock_enrollment_resend_success": {
+    "message": "我們已寄出一鍵連結到 $email$。",
+    "description": "MyAdBlock license email successfully sent message.",
+    "placeholders": {
+      "email": {
+        "content": "$1",
+        "example": "alice@example.com"
+      }
+    }
+  },
+  "myadblock_enrollment_link_info": {
+    "message": "按下連結即可輕鬆在其他 Chrome 瀏覽器中設定 MyAdBlock。",
+    "description": "Explains what happens when clicking the magic link."
+  },
+  "myadblock_enrollment_resend_error": {
+    "message": "重新寄送確認電子郵件時出現問題。",
+    "description": "MyAdBlock license email failed to send error message."
+  },
+  "myadblock_enrollment_resend_button": {
+    "message": "重寄連結",
+    "description": "Text on the MyAdBlock enrollment resend email button"
+  },
   "error_msg_header": {
     "message": "哎呀！很抱歉，載入 AdBlock 選單時遇到了問題。",
     "description": "The text on the popup menu when an error has occurred"
@@ -2002,7 +2048,7 @@
     "description": "Placeholder text in the Custom Filter list URL bar"
   },
   "filterantisocial2": {
-    "message": "反社會過濾清單",
+    "message": "反社群過濾清單",
     "description": "A filter list"
   },
   "filter_antisocial_explained": {
@@ -2015,7 +2061,7 @@
   },
   "filter_annoyances_explained": {
     "message": "阻擋頁面內彈出視窗、社群媒體與相關小工具以及其他煩惱",
-    "description": "A filter list explaination"
+    "description": "A filter list explanation"
   },
   "filterwarning_removal2": {
     "message": "Adblock Warning Removal 清單",
@@ -2023,7 +2069,7 @@
   },
   "filter_warning_removal_explained": {
     "message": "移除使用廣告攔截程式的警告",
-    "description": "A filter list explaination"
+    "description": "A filter list explanation"
   },
   "filterlistsrock2": {
     "message": "過濾清單可以阻擋網路上大部分的廣告。您也可以……",
@@ -2157,6 +2203,10 @@
     "message": "AdBlock 主頁",
     "description": "Title for link to AdBlock's website"
   },
+  "twitch_hiding_option": {
+    "message": "在 Twitch™ 上啟用隱藏串流廣告",
+    "description": "Description of option on General tab of the Options page to hide Twitch ads"
+  },
   "callout_new_feature": {
     "message": "新增!",
     "description": "Text to callout a new feature"
@@ -2188,5 +2238,157 @@
   "myadblock_payment_not_available_subtitle": {
     "message": "我們無法連到伺服器",
     "description": "The sub-title of an error message box in payment iframe in the Options page."
+  },
+  "sync_tab_item": {
+    "message": "同步",
+    "description": "Title of the Sync sub-tab of the Options page"
+  },
+  "myadblock_sync_description": {
+    "message": "在多個瀏覽器與裝置上同步您的偏好設定",
+    "description": "Text on the MyAdBlock tab, Sync panel of the Options page"
+  },
+  "sync_check_status_text": {
+    "message": "在您不同的擴充套件中同步並自訂 AdBlock [[檢查狀態]]",
+    "description": "message and button text on the Sync sub-tab of the Options page"
+  },
+  "sync_turn_on_text": {
+    "message": "在您不同的擴充套件中同步並自訂 AdBlock [[開啟同步]]",
+    "description": "message and button text on the Sync sub-tab of the Options page"
+  },
+  "sync_turn_off_btn_text": {
+    "message": "關閉",
+    "description": "button text on the Sync sub-tab of the Options page"
+  },
+  "sync_turn_on_invalid_name_text": {
+    "message": "請命名此擴充套件然後繼續",
+    "description": "error message text on the Sync sub-tab of the Options page"
+  },
+  "sync_turn_on_duplicate_name_text": {
+    "message": "此擴充套件名稱已使用",
+    "description": "error message text on the Sync sub-tab of the Options page"
+  },
+  "sync_extension_section_title": {
+    "message": "擴充套件",
+    "description": "section title text on the Sync sub-tab of the Options page"
+  },
+  "sync_header_message_no_license": {
+    "message": "請給我們一點時間來同步。",
+    "description": "message to users on the sync page when the license is unavailable, inactive or a license ID hasn't been returned yet"
+  },
+  "sync_header_message_getting_license": {
+    "message": "檢查中……",
+    "description": "message to users on the sync page when the extension is getting the license"
+  },
+  "sync_header_message_in_progress": {
+    "message": "同步進行中……",
+    "description": "message to users on the options pages when syncing with the server is in progress"
+  },
+  "sync_header_message_sync_complete": {
+    "message": "同步完成",
+    "description": "message to users on the option pages when syncing with the server server is complete"
+  },
+  "sync_extension_no_extension_msg": {
+    "message": "您沒有同步的擴充套件。",
+    "description": "message to users on the sync page when the license is unavailable, inactive or a license ID hasn't been returned yet"
+  },
+  "sync_header_message_setup_fail_prefix": {
+    "message": "同步錯誤：",
+    "description": "start of error message to users on the sync page when sync fails."
+  },
+  "sync_header_message_setup_fail_part_2": {
+    "message": "請在幾分鐘後再次嘗試開啟同步。",
+    "description": "message to users on the sync page when initial setup of sync fails for some unknown reason."
+  },
+  "sync_header_message_error_prefix": {
+    "message": "此擴充套件未同步。",
+    "description": "Start of an sync error message to users on the Options page or AdBlock popup menu."
+  },
+  "sync_header_message_error_suffix": {
+    "message": "請稍後再試。",
+    "description": "Part of an sync error message to users on the Options page or AdBlock popup menu."
+  },
+  "sync_header_message_old_commit_version_part_2": {
+    "message": "我們已同步此擴充套件並還原了您的變更。",
+    "description": "part 2 of a message to users on the sync page and popup menu when initial setup of sync fails for some unknown reason."
+  },
+  "sync_header_message_old_commit_version_part_3": {
+    "message": "請再次進行變更。",
+    "description": "part 3 of a message to users on the sync page when initial setup of sync fails for some unknown reason."
+  },
+  "sync_header_error_revert_message_part_2": {
+    "message": "您的變更已還原。",
+    "description": "part 2 of a message to users on the sync page when sending the sync data fails for some unknown reason."
+  },
+  "sync_header_message_old_commit_version_customize_tab_part_2": {
+    "message": "我們已同步此擴充套件並將還原您的變更。",
+    "description": "part 2 of a message to users on the sync page when initial setup of sync fails for some unknown reason."
+  },
+  "sync_header_message_old_commit_version_customize_tab_part_3": {
+    "message": "請將自訂規則複製到剪貼簿，重新載入頁面，然後再次進行變更。",
+    "description": "part 3 of a message to users on the sync page when initial setup of sync fails for some unknown reason."
+  },
+  "sync_header_error_message_menu_part_3": {
+    "message": "請再次進行變更。",
+    "description": "part 3 of a message to users on the sync page when initial setup of sync fails for some unknown reason."
+  },
+  "sync_show_name_text": {
+    "message": "[[$name$]] 現已同步",
+    "description": "message to users on the sync page when which includes the name of the extension \/ device",
+    "placeholders": {
+      "name": {
+        "content": "$1",
+        "example": "Device 1"
+      }
+    }
+  },
+  "sync_device_name_list_updated_at_msg": {
+    "message": "上次更新於 $timestamp$",
+    "description": "message to users on when the sync page was last updated with the name of the extensions \/ devices (displayed in locale specific format)",
+    "placeholders": {
+      "timestamp": {
+        "content": "$1",
+        "example": "April 30, 2019 6:25 pm for US\/English locale"
+      }
+    }
+  },
+  "sync_extension_name_placeholder": {
+    "message": "將此擴充套件命名……",
+    "description": "placeholder text in the extension \/ device name field on the sync page"
+  },
+  "sync_verify_turn_on_text": {
+    "message": "開啟同步將清除此擴充套件目前的設定資訊。",
+    "description": "message text in the extension \/ device name field on the sync page"
+  },
+  "sync_update_now_section_title": {
+    "message": "手動同步",
+    "description": "section title for the sync now section on the sync page"
+  },
+  "sync_now_message": {
+    "message": "我會自動擷取更新；您也可以",
+    "description": "message text in the on the sync page "
+  },
+  "sync_now_btn_text": {
+    "message": "立即同步",
+    "description": "button text on the Sync sub-tab of the Options page"
+  },
+  "sync_message_old_version_part_1": {
+    "message": "您使用的是舊版的 AdBlock。",
+    "description": "button text on the Sync sub-tab of the Options page"
+  },
+  "sync_message_old_version_part_2": {
+    "message": "請[[更新 AdBlock]] 以便我們將您的設定同步。",
+    "description": "button text on the Sync sub-tab of the Options page"
+  },
+  "filteracceptable_ads_privacy": {
+    "message": "可接受廣告政策",
+    "description": "A filter list"
+  },
+  "acceptable_ads_privacy": {
+    "message": "只允許沒有第三方追蹤的廣告",
+    "description": "The text of an Acceptable Ads sub-option in the General tab"
+  },
+  "enable_do_not_track_advice": {
+    "message": "若要正常執行此功能，請在瀏覽器偏好設定中啟用「不要追蹤」(DNT)。",
+    "description": "The text advicing to enable DNT if Acceptable Ads is enabled in the General tab"
   }
 }
